# NeuronNetwork_project

./: CMakeLists.txt  Doxyfile  README.md  customdoxygen.css
res/: DoxygenLayout.xml  customdoxygen.css
src/: Network.cpp  Network.h  Neuron.cpp  Neuron.h  Random.cpp  Random.h  Simulation.cpp  Simulation.h  constants.h  main.cpp
test/: RandomTest.cpp
